Use query param instead of path for /purchasesForArticle
