# docs/swagger.json
@@ -72,7 +72,7 @@
                 }
             }
         },
-        "/purchasesForArticle/{articleId}": {
+        "/purchasesForArticle": {
             "get": {
                 "produces": [
                     "application/json"
@@ -86,7 +86,7 @@
                         "type": "integer",
                         "description": "ID of article to query",
                         "name": "articleId",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
